# lecount

./: DESCRIPTION  NAMESPACE  configure  configure.ac
R/: lecount.R
man/: lecount.Rd
src/: Makevars.win  digraph.hpp  glue.cpp  set.hpp
